# BlackHole

./: CMakeLists.txt  kernel.cl  main.cpp
